--- a/composer.json
+++ b/composer.json
@@ -18,24 +18,24 @@
         "ext-xsl": "*",
         "ext-curl": "*",
         "ext-dom": "*",
-        "symfony/cache": "~5.1.0",
-        "symfony/http-foundation": "~5.1.0",
-        "symfony/framework-bundle": "~5.1.0",
-        "symfony/process": "~5.1.0",
-        "symfony/dependency-injection": "~5.1.0",
-        "symfony/event-dispatcher": "~5.1.0",
-        "symfony/mime": "~5.1.0",
-        "symfony/translation": "~5.1.0",
-        "symfony/yaml": "~5.1.0",
-        "symfony/security-core": "~5.1.0",
-        "symfony/security-http": "~5.1.0",
-        "symfony/security-bundle": "~5.1.0",
-        "symfony/serializer": "~5.1.0",
-        "symfony/http-kernel": "~5.1.0",
-        "symfony/console": "~5.1.0",
-        "symfony/expression-language": "~5.1.0",
-        "symfony/validator": "~5.1.0",
-        "symfony/var-dumper": "~5.1.0",
+        "symfony/cache": "^5.2.0",
+        "symfony/http-foundation": "^5.2.0",
+        "symfony/framework-bundle": "^5.2.0",
+        "symfony/process": "^5.2.0",
+        "symfony/dependency-injection": "^5.2.0",
+        "symfony/event-dispatcher": "^5.2.0",
+        "symfony/mime": "^5.2.0",
+        "symfony/translation": "^5.2.0",
+        "symfony/yaml": "^5.2.0",
+        "symfony/security-core": "^5.2.0",
+        "symfony/security-http": "^5.2.0",
+        "symfony/security-bundle": "^5.2.0",
+        "symfony/serializer": "^5.2.0",
+        "symfony/http-kernel": "^5.2.0",
+        "symfony/console": "^5.2.0",
+        "symfony/expression-language": "^5.2.0",
+        "symfony/validator": "^5.2.0",
+        "symfony/var-dumper": "^5.2.0",
         "ezsystems/doctrine-dbal-schema": "^1.0@dev",
         "symfony-cmf/routing": "^2.3",
         "guzzlehttp/guzzle": "^6.5",
