--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
         "symfony/phpunit-bridge": "^5.1"
     },
     "conflict": {
-        "symfony/cache": "5.0.11 || 5.1.3",
+        "symfony/security-core": "5.3.0",
         "doctrine/dbal": "2.7.0",
         "ezsystems/ezpublish-legacy": "*",
         "phpunit/phpunit": "8.4.0"
