Allowed to autowire eZ\Publish\Core\MVC\Symfony\SiteAccess\SiteAccessServiceInterface

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/routing.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/routing.yml
@@ -92,6 +92,9 @@ services:
         calls:
             - [setSiteAccess, ['@ezpublish.siteaccess']]
 
+    eZ\Publish\Core\MVC\Symfony\SiteAccess\SiteAccessServiceInterface:
+        alias: 'ezpublish.siteaccess_service'
+
     ezpublish.siteaccess_router:
         class: eZ\Publish\Core\MVC\Symfony\SiteAccess\Router
         arguments:
