--- a/eZ/Publish/Core/settings/tests/common.yml
+++ b/eZ/Publish/Core/settings/tests/common.yml
@@ -69,6 +69,9 @@ services:
         calls:
             - [setSiteAccess, ['@ezpublish.siteaccess']]
 
+    eZ\Publish\Core\MVC\Symfony\SiteAccess\SiteAccessServiceInterface:
+        alias: 'ezpublish.siteaccess_service'
+
     ezpublish.siteaccess.provider.chain:
         class: eZ\Publish\Core\MVC\Symfony\SiteAccess\Provider\ChainSiteAccessProvider
         arguments:
