--- a/eZ/Publish/Core/settings/storage_engines/legacy/url_wildcard.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/url_wildcard.yml
@@ -3,6 +3,7 @@ services:
         class: eZ\Publish\Core\Persistence\Legacy\Content\UrlWildcard\Gateway\DoctrineDatabase
         arguments:
             - '@ezpublish.api.storage_engine.legacy.connection'
+            - '@Ibexa\Core\Persistence\Legacy\Content\URLWildcard\Query\CriteriaConverter'
 
     ezpublish.persistence.legacy.url_wildcard.gateway.exception_conversion:
         class: eZ\Publish\Core\Persistence\Legacy\Content\UrlWildcard\Gateway\ExceptionConversion
@@ -22,3 +23,6 @@ services:
             - "@ezpublish.persistence.legacy.url_wildcard.gateway"
             - "@ezpublish.persistence.legacy.url_wildcard.mapper"
         lazy: true
+
+    Ibexa\Core\Persistence\Legacy\Content\URLWildcard\Query\CriteriaConverter:
+        class: Ibexa\Core\Persistence\Legacy\Content\URLWildcard\Query\CriteriaConverter
