IBX-2839: Fix pagination with ez_render_content_query()

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/templating.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/templating.yml
@@ -152,6 +152,7 @@ services:
     eZ\Publish\Core\MVC\Symfony\Templating\Twig\Extension\QueryRenderingExtension:
         arguments:
             - '@fragment.handler'
+            - '@request_stack'
         tags:
             - { name: twig.extension }
 
