IBX-2934: Proxified `FieldsGroupsList` with `lazy`
For more details see https://issues.ibexa.co/browse/IBX-2934 or https://github.com/ezsystems/ezplatform-kernel/pull/314

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/services.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/services.yml
@@ -217,9 +217,11 @@ services:
     eZ\Publish\Core\Pagination\Pagerfanta\AdapterFactory\SearchHitAdapterFactoryInterface:
         alias: eZ\Publish\Core\Pagination\Pagerfanta\AdapterFactory\SearchHitAdapterFactory
 
-    ezpublish.fields_groups.list:
-        class: eZ\Publish\Core\Helper\FieldsGroups\ArrayTranslatorFieldsGroupsList
-        factory: ["@ezpublish.fields_groups.list.repository_settings_factory", "build"]
+    ezpublish.fields_groups.list: '@eZ\Publish\Core\Helper\FieldsGroups\ArrayTranslatorFieldsGroupsList'
+
+    eZ\Publish\Core\Helper\FieldsGroups\ArrayTranslatorFieldsGroupsList:
+        lazy: eZ\Publish\Core\Helper\FieldsGroups\FieldsGroupsList
+        factory: [ "@ezpublish.fields_groups.list.repository_settings_factory", "build" ]
         arguments:
             - "@translator"
 
