IBX-3445: Soften `TargetContentValidator` content check

--- a/eZ/Publish/Core/settings/repository/inner.yml
+++ b/eZ/Publish/Core/settings/repository/inner.yml
@@ -255,8 +255,7 @@ services:
 
     Ibexa\Core\Repository\Validator\TargetContentValidator:
         arguments:
-            $contentService: '@ezpublish.api.service.content'
-            $contentTypeService: '@ezpublish.api.service.content_type'
+            $repository: '@ezpublish.api.repository'
 
     Ibexa\Core\Repository\Validator\TargetContentValidatorInterface:
         alias: Ibexa\Core\Repository\Validator\TargetContentValidator
