--- a/eZ/Publish/Core/settings/storage_engines/cache.yml
+++ b/eZ/Publish/Core/settings/storage_engines/cache.yml
@@ -343,7 +343,7 @@ services:
         parent: ezpublish.spi.persistence.cache.abstractHandler
 
     eZ\Publish\Core\Persistence\Cache\SettingHandler:
-        parent: ezpublish.spi.persistence.cache.abstractHandler
+        parent: ezpublish.spi.persistence.cache.abstractInMemoryPersistenceHandler
 
     ezpublish.spi.persistence.cache:
         class: eZ\Publish\Core\Persistence\Cache\Handler
