--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/commands.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/commands.yml
@@ -54,3 +54,11 @@ services:
             $ioService: '@ezpublish.fieldType.ezimage.io_service'
         tags:
             - { name: console.command }
+
+    Ibexa\Bundle\Core\Command\ExpireUserPasswordsCommand:
+        autowire: true
+        autoconfigure: true
+        arguments:
+            $userHandler: '@ezpublish.spi.persistence.user_handler'
+        tags:
+            - { name: console.command }
