Added `admin_group` group declaration to default test settings

--- a/eZ/Bundle/EzPublishCoreBundle/Tests/Resources/config/ezpublish.yaml
+++ b/eZ/Bundle/EzPublishCoreBundle/Tests/Resources/config/ezpublish.yaml
@@ -11,6 +11,8 @@ ezpublish:
               'eng': 'eng'
               'ku6"H': 'ku6"H'
           match: ~
+          groups:
+              admin_group: []
     repositories:
         default:
             storage: ~
