--- a/composer.json
+++ b/composer.json
@@ -114,7 +114,8 @@
     "config": {
         "process-timeout": 3000,
         "allow-plugins": {
-            "composer/package-versions-deprecated": true
+            "composer/package-versions-deprecated": true,
+            "*": false
         }
     },
     "scripts": {
