IBX-5119: Added logging for invalid content's locations setup

--- a/eZ/Publish/Core/settings/repository/inner.yml
+++ b/eZ/Publish/Core/settings/repository/inner.yml
@@ -190,6 +190,8 @@ services:
             $contentLanguageHandler: '@ezpublish.spi.persistence.language_handler'
             $fieldTypeRegistry: '@eZ\Publish\Core\FieldType\FieldTypeRegistry'
             $thumbnailStrategy: '@eZ\Publish\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy'
+        calls:
+            - [setLogger, ['@?logger']]
 
     eZ\Publish\Core\Repository\Mapper\RoleDomainMapper:
         arguments:
