--- a/eZ/Publish/Core/settings/storage_engines/cache.yml
+++ b/eZ/Publish/Core/settings/storage_engines/cache.yml
@@ -54,7 +54,7 @@ parameters:
         role_with_by_id_suffix: 'r-%s-bi'
         role_assignment_with_by_role_suffix: 'ra-%s-bro'
         role_assignment_with_by_role_offset_limit_suffix: 'ra-%%s-bro-%%s-%%s'
-        role_assignment_by_role_count: 'ra-%s-count'
+        role_assignment_by_role_count: 'rac-%s'
         role_assignment_with_by_group_inherited_suffix: 'ra-%s-bgi'
         role_assignment_with_by_group_suffix: 'ra-%s-bg'
         section: 'se-%s'
@@ -150,7 +150,7 @@ parameters:
         role_with_by_id_suffix: 'r-%s-bi'
         role_assignment_with_by_role_suffix: 'ra-%s-bro'
         role_assignment_with_by_role_offset_limit_suffix: 'ra-%%s-bro-%%s-%%s'
-        role_assignment_by_role_count: 'ra-%s-count'
+        role_assignment_by_role_count: 'rac-%s'
         role_assignment_with_by_group_inherited_suffix: 'ra-%s-bgi'
         role_assignment_with_by_group_suffix: 'ra-%s-bg'
         section: 'se-%s'
