--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/mime": "^5.3.0",
         "symfony/translation": "^5.3.0",
         "symfony/yaml": "^5.3.0",
+        "symfony/runtime": "^5.3.0",
         "symfony/security-core": "^5.3.0",
         "symfony/security-http": "^5.3.0",
         "symfony/security-bundle": "^5.3.0",
