--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,8 @@
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "symfony/phpunit-bridge": "^5.1",
         "symfony/proxy-manager-bridge": "^5.3",
-        "phpstan/phpstan": "^1.2"
+        "phpstan/phpstan": "^1.2",
+        "symfony/runtime": "^5.3.0"
     },
     "conflict": {
         "friendsofphp/php-cs-fixer": "3.5.0",
