--- a/composer.json
+++ b/composer.json
@@ -142,7 +142,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.3.x-dev"
+            "dev-master": "1.3.x-dev",
+            "dev-ibx-7579_rows_are_added_to_ezurl_object_link_on_every_save_by_richtext": "1.3.x-dev"
         },
         "thanks": {
             "name": "ezsystems/ezplatform",
